<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Cognex_Camera" Id="{c7ee11b1-2602-4f9b-ba3d-77304b0669ea}">
    <Declaration><![CDATA[TYPE Cognex_Camera :
STRUCT
	// IO
	AcquisitionControl AT %Q* : Acquisition_Control;
	AcquisitionStatusRegister AT %I* : Acquisition_Status_Register;
	AcquistionID AT %I* : UINT;
	InspectionControlRegister AT %Q* : Inspection_Control_Register;
	InspectionStatusRegister AT %I* : Inspection_Status_Register;
	ErrorCode AT %I* : UINT;
	CurrentJobID AT %I* : UINT;
	Command AT %Q* : UINT;
	SoftEventStatus AT %I* : SoftEvent;
	SoftEventControl AT %I* : SoftEvent;
	UserData AT %Q* : ARRAY[0..63] OF BYTE; // TODO grote bepalen on compile time
	InspectionID AT %I* : UINT;
	ResultCode AT %I* : UINT;
	InspectionResults AT %I* : ARRAY[0..63] OF BYTE; // TODO grote bepalen on compile time
	
	// local var
	Input_Buffer_Layout : Buffer_Layout;
	Ouput_Buffer_Layout : Buffer_Layout;
	CameraState : Camera_State := Camera_State.Idel;
	JobeState : Job_State;
	CommandState : Command_State;
	Error : Camera_Error := Camera_Error.None;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>